# Assessment

./: README.md  alembic.ini  docker-compose.yml  patients.csv  pyproject.toml
alembic/versions/: 3caff2547550_add_uuid_defaults.py  f7bb8e4e14ec_initial_schema_design.py
src/api/: main.py  schemas.py
src/database/: models.py
src/ingestion/: pipeline.py
