[tool.poetry]
name ="medisync-backend"
version ="0.1.0"
description ="Backend service for Medisync application"
authors =["Harshith Sai Veeraiah"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.122.0"
uvicorn = "^0.38.0"
pydantic = "^2.12.4"
sqlalchemy = "^2.0.32"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
pydantic-settings = "^2.3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"